--- a/Front/index.html
+++ b/Front/index.html
@@ -5,24 +5,28 @@
 	<meta charset="UTF-8">
 	<title>Excercise Generator</title>
 		<!-- Links -->
-		<script src="bower_components/angular/angular.js"></script>
+		<script src="bower_components/angular/angular.min.js"></script>
 		<script src="/bower_components/angular-route/angular-route.min.js"></script>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<script src="scripts/controllers/excercisesController.js"></script>
 		<script src="/app.js"></script>
 </head>
-	<section ng-app="FitGenerator" ng-controller="excerciseController as excercise">
+	<body ng-app="FitGenerator">
+	<section ng-controller="excerciseController as excercise">
+	<ng-view></ng-view>
 		<h1>Fitness Randomizer</h1>
-
 <div class="card card-inverse card-info text-center" style="width: 30rem;">
 		<div class="card-block">
-			<img src="">
-			<h4 class ="card-title">{{excercise.info.bodyArea}}</h4>
-			<p class="card-text">{{excercise.info.name}}</p>
-			<p class="card-text">Reps: {{excercise.info.reps}}</p>
-			<p class="card-text">Sets: {{excercise.info.sets}}</p>
-	<button ng-click="excercise.pick()">Generate Excercise</button>
+			<img src="{{excercise.info.picture}}">
+			<h4 class 	="card-title">{{excercise.info.bodyArea}}</h4>
+			<p class	="card-text">{{excercise.info.name}}</p>
+			<p class	="card-text">Reps: {{excercise.info.reps}}</p>
+			<p class	="card-text">Sets: {{excercise.info.sets}}</p>
+	<button ng-click	="excercise.pick()">Generate Excercise</button>
 	<!-- <button ng-click="save()"></button> Save to workout list -->
 	</div>
 	</div>
 </section>
-</div
+</div>
+</body>
 </html>
